--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@
 /************************* YOUR SETTINGS *************************/
 
 /* add your css here, feel free to use comments and order them logically for better readability */
+#header {
+background-color: F08E43;
+width: 70%;
+Height: 100px;}
+ #logo {width:30%;
+Height:100px;}
+h1 {
+   color: red;
+}
