--- a/style.css
+++ b/style.css
@@ -17,12 +17,36 @@
 /************************* YOUR SETTINGS *************************/
 
 /* add your css here, feel free to use comments and order them logically for better readability */
-#header {
-background-color: F08E43;
+#menubalk {
+background-color:#F08E43;
 width: 70%;
-Height: 100px;}
- #logo {width:30%;
+Height: 100px;
+font-size: 24px;
+font-family:Arial;}
+ #logo {
+width:30%;
 Height:100px;}
+#tekst {
+background-color:#F0B92B;
+width: 30%;
+height: 600px;
+font-size:14px;
+font-family:Arial;}
+#foto {
+width: 70%;
+height: 600px;}
+#teksten {
+background-color: #F0B92B;  
+width: 100%;
+height: 200px;
+font-size:14px;
+font-family:Arial;}
+#contact {
+background-color: #f06839;
+width: 100%;
+height: 100px;
+font-size:14px;
+font-family:Arial;
+color: #F0D443;}
 h1 {
-   color: red;
-}
+   color: red;}
