--- a/style.css
+++ b/style.css
@@ -18,34 +18,40 @@
 
 /* add your css here, feel free to use comments and order them logically for better readability */
 #menubalk {
-background-color:#F08E43;
+background-color: #F08E43;
 width: 70%;
 Height: 100px;
 font-size: 24px;
-font-family:Arial;}
+font-family:Arial;
+float: right;}
  #logo {
 width:30%;
-Height:100px;}
+Height:100px;
+float: left;}
 #tekst {
 background-color:#F0B92B;
 width: 30%;
 height: 600px;
 font-size:14px;
-font-family:Arial;}
+font-family:Arial;
+float: left;}
 #foto {
 width: 70%;
-height: 600px;}
+height: 600px;
+float: right;}
 #teksten {
 background-color: #F0B92B;  
 width: 100%;
 height: 200px;
 font-size:14px;
-font-family:Arial;}
+font-family:Arial;
+float: left;}
 #contact {
-background-color: #f06839;
+background-color: #000000;
 width: 100%;
 height: 100px;
 font-size:14px;
 font-family:Arial;
-color: #F0D443;}
+color: #F0D443;
+float: left;}
 
