--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ background-color: #F08E43;
 width: 70%;
 Height: 100px;
 font-size: 24px;
-font-family:Arial;
+font-family:arial;
+color: #000000;
 float: right;}
  #logo {
 width:30%;
@@ -76,3 +77,5 @@ height: 900px;
 font-size:14px;
 font-family:Arial;
 float: left;}
+a {color: #000000;
+text-decoration: none;}
