--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
    Warning: keep the * as selector for all tags when uncommenting. */
 /*  * {background-color: rgba(0,0,0,5%);}  */
 
-/************************* YOUR SETTINGS *************************/
+/************************* YOUR SETTINGS *************************
 
 /* add your css here, feel free to use comments and order them logically for better readability */
 #menubalk {
@@ -77,5 +77,37 @@ height: 900px;
 font-size:14px;
 font-family:Arial;
 float: left;}
+#Recepten {
+width: 17%;
+Height: 100px;
+font-size: 24px;
+font-family:arial;
+background-color: #F08E43;
+border: #000000 dotted;
+float: left;}
+#allergieën {
+width: 18%;
+Height: 100px;
+font-size: 24px;
+font-family:arial;
+background-color: #F08E43;
+border: #000000 dotted;
+float: left;}
+#Tipsentricks {
+width: 18%;
+Height: 100px;
+font-size: 24px;
+font-family:arial;
+background-color: #F08E43;
+border: #000000 dotted;
+float: right;}
+#Cybersecurity {
+width: 18%;
+Height: 100px;
+font-size: 24px;
+font-family:arial;
+background-color: #F08E43;
+border: #000000 dotted;
+float: right;}
 a {color: #000000;
 text-decoration: none;}
