--- a/style.css
+++ b/style.css
@@ -17,18 +17,19 @@
 /************************* YOUR SETTINGS *************************
 
 /* add your css here, feel free to use comments and order them logically for better readability */
+
+/* Alle css voor de blokken */
 #menubalk {
 background-color: #F08E43;
 width: 70%;
 Height: 100px;
-font-size: 24px;
-font-family:arial;
-color: #000000;
 float: right;}
+
  #logo {
 width:30%;
 Height:100px;
 float: left;}
+
 #tekst {
 background-color:#F0B92B;
 width: 30%;
@@ -36,10 +37,12 @@ height: 600px;
 font-size:14px;
 font-family:Arial;
 float: left;}
+
 #foto {
 width: 70%;
 height: 600px;
 float: right;}
+
 #teksten {
 background-color: #F0B92B;  
 width: 100%;
@@ -47,6 +50,7 @@ height: 200px;
 font-size:14px;
 font-family:Arial;
 float: left;}
+
 #contact {
 background-color: #000000;
 width: 100%;
@@ -55,59 +59,79 @@ font-size:14px;
 font-family:Arial;
 color: #F0D443;
 float: left;}
+
 #grootfoto {
 width: 100%;
 height: 600px;
 float: left;}
 #fotoA {
-width: 90%;
+width: 100%;
 height: 600px;
 float: right;}
+
 #tekstA {
 background-color: #F0B92B;
-width: 90%;
-height: 200px;
+width: 100%;
+height: 1000px;
 font-size:14px;
 font-family:Arial;
 float: right;}
+
 #zijbalk {
 background-color:#F06839 ;
-width: 10%;
-height: 900px;
+width: 15%;
+height: 800px;
 font-size:14px;
 font-family:Arial;
 float: left;}
+
 #Recepten {
 width: 17%;
 Height: 100px;
 font-size: 24px;
 font-family:arial;
 background-color: #F08E43;
-border: #000000 dotted;
 float: left;}
+
 #allergieën {
 width: 18%;
 Height: 100px;
 font-size: 24px;
 font-family:arial;
 background-color: #F08E43;
-border: #000000 dotted;
 float: left;}
+
 #Tipsentricks {
 width: 18%;
 Height: 100px;
 font-size: 24px;
 font-family:arial;
 background-color: #F08E43;
-border: #000000 dotted;
 float: right;}
+
 #Cybersecurity {
 width: 18%;
 Height: 100px;
 font-size: 24px;
 font-family:arial;
 background-color: #F08E43;
-border: #000000 dotted;
 float: right;}
+
+/* overige css */
 a {color: #000000;
 text-decoration: none;}
+
+#menubalk a {
+   float: left;
+   color: #000000;
+   padding: 20px 30px;
+   text-align: center;
+   text-decoration: none;
+   font-size: 17px;}
+   
+#menubalk a:hover {
+   background-color: #292929;
+   color: rgb(255, 255, 255);}
+   ul {
+list-style-type: square;
+   }
