--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ float: left;}
 background-color:#F0B92B;
 width: 30%;
 height: 600px;
-font-size:14px;
+font: size 16px;
 font-family:Arial;
 float: left;}
 
@@ -43,13 +43,13 @@ width: 70%;
 height: 600px;
 float: right;}
 
-#teksten {
-background-color: #F0B92B;  
+#tekstonder {
+background-color: #F0B92B;
 width: 100%;
-height: 200px;
-font-size:14px;
+height: 1000px;
+font-size:16px;
 font-family:Arial;
-float: left;}
+float: right;}
 
 #contact {
 background-color: #000000;
@@ -64,26 +64,14 @@ float: left;}
 width: 100%;
 height: 600px;
 float: left;}
-#fotoA {
-width: 100%;
-height: 600px;
-float: right;}
 
 #tekstA {
 background-color: #F0B92B;
 width: 100%;
-height: 1000px;
+height: 1100px;
 font-size:14px;
 font-family:Arial;
 float: right;}
-
-#zijbalk {
-background-color:#F06839 ;
-width: 15%;
-height: 800px;
-font-size:14px;
-font-family:Arial;
-float: left;}
 
 #Recepten {
 width: 17%;
@@ -117,6 +105,14 @@ font-family:arial;
 background-color: #F08E43;
 float: right;}
 
+#tekstonderT {
+   background-color: #F0B92B;
+   width: 100%;
+   height: 200px;
+   font-size:16px;
+   font-family:Arial;
+   float: right;}
+
 /* overige css */
 a {color: #000000;
 text-decoration: none;}
@@ -133,5 +129,4 @@ text-decoration: none;}
    background-color: #292929;
    color: rgb(255, 255, 255);}
    ul {
-list-style-type: square;
-   }
+list-style-type: circle; }
